name: advent
version: 1.0
cabal-version: 1.22
build-type: Simple

Executable Main
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      time,
      base,
      containers,
      text,
      extra,
      edit-distance,
      megaparsec,
      parser-combinators,
      parsec,
      parsec-numbers,
      vector,
      matrices,
      search-algorithms,
      split,
      keys,
      TypeCompose,
      recursion-schemes,
      cond,
      data-aviary,
      lens,
      profunctors,
      universum,
      composition,
      data-foldapp
  ghc-options: -O3 -fno-warn-missing-signatures
