name: advent
version: 1.0
cabal-version: 1.22
build-type: Simple

Executable Main
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010
  other-modules: Data.Aviary.Birds
               , Util
               , Day01
               , Day02
               , Day03
               , Day04
               , Day05
               , Day06
               , Day07
               , Day08
               , Day09
               , Day10
               , Day11
               , Day12
               , Day13
               , Day14
               , Day15
               , Day16
               , Day17
               , Day18
               , Day19
               , Day20
               , Day21
               , Day22
               , Day23
               , Day24
               , Day25
  build-depends:
      time,
      base,
      containers,
      text,
      extra,
      edit-distance,
      megaparsec,
      parser-combinators,
      parsec,
      parsec-numbers,
      vector,
      matrices,
      search-algorithms,
      split,
      keys,
      TypeCompose,
      recursion-schemes,
      cond,
      generic-lens,
      lens,
      profunctors,
      universum,
      composition,
      data-foldapp
  ghc-options: -O3
